--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h3>Javascript Practice</h3>
     <p id="demo"></p>
-    <script src="./loop/continue.js"></script>
+    <script src="./array/array.js"></script>
 </body>
 </html>
