--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body> 
-    <h3>Javascript Practice</h3>
+    <h3>Javascript Practice 
+        
+    </h3>
     <p id="demo"></p>
     <script src="./array/array.js"></script>
 </body>
